--- a/components/_components.banners.scss
+++ b/components/_components.banners.scss
@@ -53,7 +53,7 @@ $banner-cover-text-colour:  $white;
         display: inline-block;
         padding: .35em 1.5em;
         color: $banner-cover-text-colour;
-        background-color: $green-fern;
+        background-color: $green-victoria;
     }
 
     .abstract { font-size: 120%; }
