--- a/components/_components.lists.scss
+++ b/components/_components.lists.scss
@@ -15,7 +15,7 @@ $grid-area-hover-title-colour:  $white !default;
 
 $grid-area-bg:                  $grey-mercury !default;
 $grid-area-hover-bg:            $grey-alto !default;
-$grid-area-active-bg:           $green-fern !default;
+$grid-area-active-bg:           $green-victoria !default;
 
 
 // Standard grid list containing areas and their previews
