--- a/components/_components.navigation.scss
+++ b/components/_components.navigation.scss
@@ -16,11 +16,11 @@ $menu-tabbed-item-triangle-height:      ( $menu-tabbed-item-triangle-width / 3 )
 
 $menu-tabbed-item-label-colour:         $grey-stack !default;
 
-$menu-tabbed-item-hover-label-colour:   $link-colour !default;
+$menu-tabbed-item-hover-label-colour:   $blue-curious-blue !default;
 $menu-tabbed-item-hover-bg-colour:      $grey-alto !default;
 
 $menu-tabbed-item-active-label-colour:  $white !default;
-$menu-tabbed-item-active-bg-colour:     $green-fern !default;
+$menu-tabbed-item-active-bg-colour:     $green-victoria !default;
 
 
 /* Menu or submenu using tab-like layout of its items. */
