--- a/settings/_settings.colours.scss
+++ b/settings/_settings.colours.scss
@@ -34,8 +34,11 @@ $blue-st-tropaz: 		#285189;
 
 //Link text
 $blue-endeavoura:       #005ea5;
-$blue-congress-blue:    #004f8c;
-$blue-lochmara:         #007BD8;
+//Link hover
+$blue-curious-blue: 	#2B8CC4;
+
+
+
 
 
 /* ===== NAMED PALETTE ====================================================== */
@@ -70,7 +73,8 @@ $text-fade-colour:      $grey-tower;
 $vic-green:     $green-victoria;
 $vic-black:     $black-victoria;
 
-
+$blue-congress-blue:    #004f8c;
+$blue-lochmara:         #007BD8;
 
 $green-finlandia:       #5F6B5F;
 
