--- a/settings/_settings.global.scss
+++ b/settings/_settings.global.scss
@@ -68,7 +68,7 @@ $caption-font-family:   '#{$font-victoria}' !default;
 $caption-colour:        $green-mako;
 $caption-line-height:   1.35;
 
-$link-colour:           $blue-picton;
+$link-colour:           $blue-endeavoura;
 
 // Layout & Grid
 $block-highlight-colour: $grey-mercury;
