--- a/components/_components.simple-blocks.scss
+++ b/components/_components.simple-blocks.scss
@@ -124,7 +124,7 @@ $mar-bot: 0.3em;
 
         border-left: 6px solid $grey-alto;
         // border-bottom: 1px solid $grey-alto;
-        margin-top: 1.5em;
+        margin-top: 1em;
         padding: 0.5em 1em 0;
         &:first-child {
             margin-top: 0;
@@ -197,3 +197,10 @@ $mar-bot: 0.3em;
         }
     }
 }
+
+/*===============================
+=     EXAMPLE COURSE BLOCK      =
+===============================*/
+
+
+.example-course {}
