--- a/objects/_objects.buttons.scss
+++ b/objects/_objects.buttons.scss
@@ -25,6 +25,7 @@ $ico-margin:    .9em;
     white-space: nowrap;
     @include hoverify() {
         background-color: $btn-hover-bg;
+        color: $btn-label-colour;
     }
     ;
     // Sizing (normal size by default)
