Added; fact-block

--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -16,3 +16,4 @@
 @import '_components.contact-block.scss';
 @import '_components.image-blocks.scss';
 @import '_components.quote-block.scss';
+@import '_components.facts-block.scss';
