--- a/components/_components.forms.scss
+++ b/components/_components.forms.scss
@@ -3,6 +3,7 @@
 ======================================*/
 
 
+//This shloud probably be in base
 input,
 select[multiple=multiple] {
   background-color: $base-bg-colour;
