--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -17,3 +17,4 @@
 @import '_components.image-blocks.scss';
 @import '_components.quote-block.scss';
 @import '_components.facts-block.scss';
+@import '_components.degree-requirements.scss';
