--- a/settings/_settings.colours.scss
+++ b/settings/_settings.colours.scss
@@ -54,7 +54,7 @@ $grey-silver: 	#CCC;
 
 // NEW GREYS 
 
-$grey-mercury:		#e8e8e8; //should remove this keep other greys
+$grey-mercury:		#e8e8e8; //should remove this keep other greys use grey-gallery instead
 $grey-dusty-gray: 	#999; 
 $grey-stack: 		#808080; 
 $grey-mako: 		#475153;
