--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -18,3 +18,4 @@
 @import '_components.quote-block.scss';
 @import '_components.facts-block.scss';
 @import '_components.degree-requirements.scss';
+@import '_components.video-block.scss';
