Added; more icons, video styles, and error overlay

--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -19,3 +19,4 @@
 @import '_components.facts-block.scss';
 @import '_components.degree-requirements.scss';
 @import '_components.video-block.scss';
+@import '_components.error-overlay.scss';
