Added; Video block and slide show, tweak to simple block and contact block

--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -20,3 +20,4 @@
 @import '_components.degree-requirements.scss';
 @import '_components.video-block.scss';
 @import '_components.error-overlay.scss';
+@import '_components.image-slide-show.scss';
