--- a/objects/_objects.icons.scss
+++ b/objects/_objects.icons.scss
@@ -92,8 +92,11 @@ $ico-code-spin:                 '\e81a';
     @include define-icon( arr-up, $ico-code-arr-up );
     @include define-icon( arr-down, $ico-code-arr-down );
 
-    @include define-icon( short-arr-right, $ico-code-arr-short-right );
-    @include define-icon( short-arr-down, $ico-code-arr-short-down );
+
+    @include define-icon( arr-short-left, $ico-code-arr-short-left );
+    @include define-icon( arr-short-down, $ico-code-arr-short-down );
+    @include define-icon( arr-short-right, $ico-code-arr-short-right );
+    @include define-icon( arr-short-up, $ico-code-arr-short-up );
 
     @include define-icon( star, $ico-code-star );
     @include define-icon( link-ext, $ico-code-link-ext );
