--- a/components/_components.contact-block.scss
+++ b/components/_components.contact-block.scss
@@ -90,13 +90,13 @@ $ico-margin: 0.9em;
     
 
 
-    @include media( $tablet-and-bigger ) {
+    @include media( $desktop-and-bigger ) {
 
         padding: 1.75em 0;
 
         .block {
 
-            width: 33%;
+            width: 30%;
             height: auto;
             float: left;
             display: inline-block;
@@ -104,7 +104,7 @@ $ico-margin: 0.9em;
 
             &.button-block {
                 padding: 0;
-                width: 33%;
+                width: 40%;
                 a {
                     width: 80%;
                     min-width: 230px; 
